test_regress/t/t_std_identifier_bad.out
%Error: t/t_std_identifier.v:16:18: Package/class for ':: reference' not found: 'std'
   16 |   int baz = foo::std::bar;
      |                  ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_std_identifier.v:16:23: Can't find definition of scope/variable/func: 'bar'
   16 |   int baz = foo::std::bar;
      |                       ^~~
%Error: Exiting due to
